--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,7 @@
     "paragraph.3":"Scalable development with clean architecture, principles of accessibility and internationalization."
   },
   "digital-art":{
-    "title":"NFT's Digital Art",
+    "title":"NFTs Services",
     "paragraph.0":"The development of different digital ecosystems based on Blockchain platforms have given rise to NFTs (non-fungible tokens) defined as digital assets that are revolutionizing the world of art, video games, real estate, etc.",
     "paragraph.1":"Development of NFT tokenization platforms.",
     "paragraph.2":"Design and development of virtual spaces in Metaverses.",
@@ -28,7 +28,7 @@
     "paragraph.3":"1 box of digital tools with which you can understand how the logic of the different social networks works for the promotion of your products or services. Extra bonus! Introduction to the world of Payoneer and the possibilities that this card opens up, having a safe and accessible way of charging and paying."
   },
   "commerce":{
-    "title":"E-commerce",
+    "title":"Web platforms",
     "paragraph.0":"1 box of digital tools with which you can understand how the logic of the different social networks works for the promotion of your products or services. extra bonus! Introduction to the world of Payoneer and the possibilities that this card opens up, having a safe and accessible way of charging and paying. Internet sales, opening and moving a large part of the markets to a digital market. This highlights the importance of being part of this change, having a virtual store that allows new brands to be known, offering both products and services in this way.",
     "paragraph.1":"Development of functional and creative E-commerce platforms that can relate the seller with his community, to sell his own products or to expose a portfolio of different brands.",
     "paragraph.2":"Integration with payment gateways.",
@@ -49,14 +49,14 @@
   },
   "beginning":{
     "title-1":"Digital Systems",
-    "title-2":"Ecommerce",
+    "title-2":"Web platforms",
     "title-3":"Head hunting developers",
     "title-4":"Mobile Apps",
     "title-5":"Metaverse",
     "coaching":"Coaching",
     "coaching-1":"Virtual tourism",
     "coaching-2":"Digital coaching",
-    "title-6":"NFT Digital Art",
+    "title-6":"NFTs Services",
     "title-7":"Digital Strategy",
     "title-8":"Immersive digital production",
     "title-9":"Exponential Marketing",
@@ -148,7 +148,7 @@
     },
 
   "inicio":{
-    "presentation":"We are a startup that work with social resposibility and cultural compromise, designing and developing digital solution with creativity and innovation"
+    "presentation":"We are an enterprise that work with social resposibility and cultural compromise, designing and developing digital solution with creativity and innovation"
   },
 
   "titles": {
